--- a/TeamCores.Web/Views/Course/Add.cshtml
+++ b/TeamCores.Web/Views/Course/Add.cshtml
@@ -5,25 +5,62 @@
 {
     <script src="~/js/pattern.js"></script>
 }
+@section style{
+
+    <link href="~/css/course/add.css" rel="stylesheet"/>
+}
 <div class="content-body">
-    <i-form ref="formValidate" :model="user" :rules="validateRules" :label-width="80">
-        <Form-item class="w-48" label="用户名" prop="Username">
-            <i-input v-model="user.Username" placeholder="请输入用户名"></i-input>
+    <i-form ref="formValidate" :model="course" :rules="validateRules" :label-width="80">
+        <Form-item class="w-48" label="课程标题" prop="Title">
+            <i-input v-model="course.Title" placeholder="课程标题"></i-input>
         </Form-item>
-        <Form-item class="w-48" label="邮箱" prop="Email">
-            <i-input v-model="user.Email" placeholder="请输入邮箱地址"></i-input>
+        <Form-item class="w-48" label="课程图片" prop="Remarks">
+            <div class="demo-upload-list" v-for="item in uploadList">
+                <template v-if="item.status === 'finished'">
+                    <img :src="item.url">
+                    <div class="demo-upload-list-cover">
+                        <Icon type="ios-eye-outline" v-on:click.native="handleView(item.name)"></Icon>
+                        <Icon type="ios-trash-outline" v-on:click.native="handleRemove(item)"></Icon>
+                    </div>
+                </template>
+                <template v-else>
+                    <Progress v-if="item.showProgress" :percent="item.percentage" hide-info></Progress>
+                </template>
+            </div>
+            <Upload ref="upload"
+                    :show-upload-list="false"
+                    :default-file-list="defaultList"
+                    :on-success="handleSuccess"
+                    :format="['jpg','jpeg','png']"
+                    :max-size="2048"
+                    :on-format-error="handleFormatError"
+                    :on-exceeded-size="handleMaxSize"
+                    :before-upload="handleBeforeUpload"
+                    multiple
+                    type="drag"
+                    action="/api/uploadify/form"
+                    style="display: inline-block; width: 58px;">
+                <div style="height: 58px; line-height: 58px; width: 58px;">
+                    <Icon type="camera" size="20"></Icon>
+                </div>
+            </Upload>
+            <Modal title="查看图片" v-model="visible">
+                <img :src="'https://o5wwk8baw.qnssl.com/' + imgName + '/large'" v-if="visible" style="width: 100%">
+            </Modal>
         </Form-item>
-        <Form-item class="w-48" label="手机号码" prop="Mobile">
-            <i-input v-model="user.Mobile" placeholder="请输入手机号码"></i-input>
+        <Form-item class="w-48" label="所属科目" prop="SubjectId">
+            <i-select v-model="course.SubjectId">
+                <i-option v-for="item in subjects" :value="item.SubjectId" :key="item.SubjectId">{{item.Name}}</i-option>
+            </i-select>
         </Form-item>
-        <Form-item class="w-48" label="密码" prop="Password">
-            <i-input type="password" v-model="user.Password" placeholder="请设置用户密码"></i-input>
+        <Form-item class="w-48" label="课程摘要" prop="Remarks">
+            <i-input v-model="course.Remarks" placeholder="请输入课程摘要"></i-input>
         </Form-item>
-        <Form-item class="w-48" label="真实姓名" prop="Name">
-            <i-input v-model="user.Name" placeholder="请输入真是姓名"></i-input>
+        <Form-item class="w-48" label="课程内容" prop="Content">
+            <i-input v-model="course.Content" placeholder="请课程内容"></i-input>
         </Form-item>
-        <Form-item class="w-48" label="头衔" prop="Title">
-            <i-input v-model="user.Title" placeholder="请输入头衔"></i-input>
+        <Form-item class="w-48" label="学习目标" prop="Objective">
+            <i-input v-model="course.Objective" placeholder="请输入学习目标"></i-input>
         </Form-item>
         <Form-item class="w-48 float-right">
             <i-button type="primary" v-on:click="handleSubmit('formValidate')">提交</i-button>
@@ -39,78 +76,73 @@
         var vm = new Vue({
             el: '#content',
             data: {
+                subjects: {},
                 // 用户对象
-                user: {
-                    Username: "",
-                    Email: "",
-                    Mobile: "",
-                    Password: "",
-                    Name: "",
-                    Title: ""
+                course: {
+                    CourseId: 0,
+                    Title: "",
+                    SubjectId: "",
+                    Image: "",
+                    Remarks: "",
+                    Content: "",
+                    Objective: ""
                 },
                 // 验证规则
                 validateRules: {
-                    Username:
+                    Title:
                     [
                         {
                             required: true,
-                            message: "用户名不能为空"
+                            message: "课程标题不能为空"
                         }
                     ],
-                    Email: [
+                    SubjectId: [
                         {
                             required: true,
-                            message: "邮箱不能为空"
-                        },
-                        {
-                            pattern: pattern["Text.User.Email"],
-                            message: "邮箱格式不正确!",
-                            transform(value) {
-                                if (value)
-                                    return value.toString().trim();
-                                return value;
-                            }
+                            message: "请选择科目"
                         }
                     ],
-                    Mobile: [
+                    Remarks: [
                         {
                             required: true,
-                            message: "手机号码不能为空"
-                        },
-                        {
-                            pattern: pattern["Text.User.Phone"],
-                            message: "请输入正确的手机号码!",
-                            transform(value) {
-                                if (value)
-                                    return value.toString().trim();
-                                return value;
-                            }
+                            message: "课程摘要不能为空"
                         }
                     ],
-                    Password: [
+                    Content: [
                         {
                             required: true,
-                            message: "密码不能为空"
+                            message: "课程内容不能为空"
                         }
                     ],
-                    Name: [
+                    Objective: [
                         {
                             required: true,
-                            message: "姓名不能为空"
-                        }
-                    ],
-                    Title: [
-                        {
-                            required: true,
-                            message: "头衔不能为空"
+                            message: "学习目标不能为空"
                         }
                     ]
-                }
+                },
+
+                //图片上传
+                defaultList: [
+                ],
+                imgName: '',
+                visible: false,
+                uploadList: []
+            },
+            created() {
+                this.getSubjects();
+            },
+            mounted() {
+                this.uploadList = this.$refs.upload.fileList;
             },
             methods: {
                 goList() {
                     location = "/course/index";
                 },
+                /**
+                 * 保存
+                 * @@param name 表单名称
+                 */
                 handleSubmit(name) {
                     this.$refs[name].validate((valid) => {
                         if (valid) {
@@ -122,8 +154,8 @@
                                     if (!data.Error) {
                                         this.$Message.success("添加成功!");
                                         setTimeout(() => {
-                                            location = "/course/index";
-                                        },
+                                                location = "/course/index";
+                                            },
                                             1000);
                                     } else {
                                         this.$Message.error(data.Message);
@@ -136,8 +168,70 @@
                         }
                     });
                 },
+                /**
+                 * 重置
+                 * @@param name 表单名称
+                 */
                 handleReset(name) {
                     this.$refs[name].resetFields();
+                },
+                /**
+                 * 获取所有的科目
+                 */
+                getSubjects() {
+                    var _this = this;
+                    Ajax.post({
+                        url: "/api/subjects/search",
+                        data: { pageIndex: 1, pageSize: 100 },
+                        success: (response) => {
+                            var data = response.data;
+                            if (!data.Error) {
+                                const pager = data.Data;
+                                _this.subjects = pager.Table;
+                            }
+                        },
+                        error: (error) => {
+
+                        }
+                    });
+                },
+
+                /**************************图片上传相关********/
+
+                handleView(name) {
+                    this.imgName = name;
+                    this.visible = true;
+                },
+                handleRemove(file) {
+                    // 从 upload 实例删除数据
+                    const fileList = this.$refs.upload.fileList;
+                    this.$refs.upload.fileList.splice(fileList.indexOf(file), 1);
+                },
+                handleSuccess(res, file) {
+                    // 因为上传过程为实例，这里模拟添加 url
+                    file.url = 'https://o5wwk8baw.qnssl.com/7eb99afb9d5f317c912f08b5212fd69a/avatar';
+                    file.name = '7eb99afb9d5f317c912f08b5212fd69a';
+                },
+                handleFormatError(file) {
+                    this.$Notice.warning({
+                        title: '文件格式不正确',
+                        desc: `文件 ${file.name} 格式不正确，请上传 jpg 或 png 格式的图片。`
+                    });
+                },
+                handleMaxSize(file) {
+                    this.$Notice.warning({
+                        title: '超出文件大小限制',
+                        desc: `文件 ${file.name} 太大，不能超过 2M。`
+                    });
+                },
+                handleBeforeUpload() {
+                    const check = this.uploadList.length < 5;
+                    if (!check) {
+                        this.$Notice.warning({
+                            title: '最多只能上传 5 张图片。'
+                        });
+                    }
+                    return check;
                 }
             }
         });
